# health_financing_narrative

./: .gitignore  README.md  pyproject.toml
output/: chart_data_available_indicators.csv  chart_data_gdp_vs_child_mortality.csv  chart_data_government_spending_per_capita_life_expectancy.csv  chart_data_immunisation_external_share.csv  chart_gdp_vs_child_mortality.csv  chart_government_spending_per_capita_life_expectancy.csv  chart_immunisation_external_share.csv  us_health_aid_vs_gov_health.csv
raw_data/: gov_health_spending.csv
scripts/: common.py  config.py  data_for_plots.py
scripts/us_health_chart/: gov_health.py
